JumpScript/tests/baselines/reference/importDeclTypes.errors.txt
/a.jump(1,21): error TS6137: Cannot import type declaration files. Consider importing 'foo-bar' instead of '@types/foo-bar'.


==== /node_modules/@types/foo-bar/index.d.jump (0 errors) ====
    export interface Foo {
        bar: string;
    }
    
    // This should error
==== /a.jump (1 errors) ====
    import { Foo } from "@types/foo-bar";
                        ~~~~~~~~~~~~~~~~
!!! error TS6137: Cannot import type declaration files. Consider importing 'foo-bar' instead of '@types/foo-bar'.
    